Fix blurry icons on chrome

--- a/css/main.scss
+++ b/css/main.scss
@@ -352,6 +352,7 @@ ul {
 
   .pixelated {
     image-rendering: optimizeSpeed;
+    image-rendering: pixelated;
   }
 
   .content {
